--- a/package.json
+++ b/package.json
@@ -7,16 +7,30 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vapi-ai/web": "^1.0.100",
+    "framer-motion": "^12.23.25",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "body-parser": "^1.20.4",
+    "concurrently": "^9.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "nodemon": "^3.1.11"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node backend.js",
+    "server:dev": "node backend.js",
+    "client": "set PORT=3000 && react-scripts start",
+    "dev": "concurrently \"node backend.js\" \"npm run client\""
   },
   "eslintConfig": {
     "extends": [
