Production ready: Update branding - Replace React references with DatingAdvice.io in index.html and manifest.json, add OG/Twitter meta tags, update theme colors to dark theme, remove scrollbar overflow issues, clean up unnecessary test files (server.js, test-server.js, BACKEND_SETUP.md, verify-setup.js, nodemon.json), add DatingAdvice.io SVG logo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "DatingAdvice.io",
+  "name": "DatingAdvice.io - AI Relationship Strategist",
+  "description": "Your Personal AI Relationship Coach. Get expert relationship advice powered by AI.",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,16 +11,20 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#0f0f1e",
+  "background_color": "#0f0f1e",
+  "scope": "/",
+  "orientation": "portrait-primary"
 }
