--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Frontend Configuration
 REACT_APP_OPENROUTER_API_KEY=AIzaSyCJuzgAKCgLZXP3PpMzoCbC2-6QocT2X2k
 REACT_APP_BACKEND_URL=http://localhost:5001
-REACT_APP_FRONTEND_URL=http://localhost:3000
+REACT_APP_FRONTEND_URL=https://datingadivce.netlify.app/
 
 # Backend Configuration
 PORT=5001
