Remove exposed API key - use environment variables instead

--- a/.env
+++ b/.env
@@ -2,15 +2,14 @@
 # Replace 'your_google_api_key_here' with your actual API key
 
 # Frontend Configuration
-REACT_APP_OPENROUTER_API_KEY=AIzaSyCJuzgAKCgLZXP3PpMzoCbC2-6QocT2X2k
-REACT_APP_BACKEND_URL=http://localhost:5001
-REACT_APP_FRONTEND_URL=https://datingadivce.netlify.app/
+REACT_APP_OPENROUTER_API_KEY=AIzaSyBQKaUqDDz50b-QpENm5tbrRCayqNrEEzg
+REACT_APP_BACKEND_URL=https://dating-advice-lysy.onrender.com/
+REACT_APP_FRONTEND_URL=https://datingadvice.netlify.app/
 
 # Backend Configuration
 PORT=5001
-OPENROUTER_API_KEY=AIzaSyCJuzgAKCgLZXP3PpMzoCbC2-6QocT2X2k
-OPENROUTER_API_KEY=AIzaSyCJuzgAKCgLZXP3PpMzoCbC2-6QocT2X2k
-NODE_ENV=development
+OPENROUTER_API_KEY=AIzaSyBQKaUqDDz50b-QpENm5tbrRCayqNrEEzg
+NODE_ENV=production
 
 # ========== VAPI Voice Assistant Configuration ==========
 # Get your VAPI API key from https://dashboard.vapi.ai/
