--- a/backend-service/package.json
+++ b/backend-service/package.json
@@ -4,8 +4,7 @@
   "description": "Backend API for Dating Advice",
   "main": "backend.js",
   "scripts": {
-    "start": "node backend.js",
-    "dev": "nodemon backend.js"
+    "start": "node backend.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -13,9 +12,6 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "axios": "^1.6.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": "22.16.0"
